--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,9 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/notebiz7750/jar/logback-access-1.2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/notebiz7750/jar/logback-classic-1.2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/notebiz7750/jar/logback-core-1.2.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/notebiz7750/jar/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
